Added help on mapping

--- a/help/additional_module_guidelines.htm
+++ b/help/additional_module_guidelines.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1 align="center"><a name="20020422182450_1">Additional module guidelines</a></h1>
-<p>Version $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $</p>
+<p>Version $Id: additional_module_guidelines.htm,v 1.10 2002/06/24 06:55:17 goset1 Exp $</p>
 <b>Contents</b><br>
 
 
@@ -32,11 +32,27 @@ type<br>
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a href="#Where _extens">Where
 to include extension of Select types</a><i><a target="_self" href="#20020422182450_9"><br>
 </a></i>
-<img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020422182450_10">Mapping-table
-- How to document the mapping of an attribute that is an extensible Select type<br>
+<img src="item-h0.gif" alt="" width="18" height="9" valign="middle">Mapping tables<br>
+<img src="item-h0.gif" alt="" width="36" height="9" valign="middle"><a target="_self" href="#20020422182450_10"><i>
+- How to document the mapping of an attribute that is an extensible Select type</i><br>
 </a>
-<img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" " href="#exted_sel">Mapping-table
-- How to document the mapping of an attribute that is an extended Select type</a><br>
+<img src="item-h0.gif" alt="" width="36" height="9" valign="middle"><a target="_self" " href="#exted_sel"><i>
+- How to document the mapping of an attribute that is an extended Select
+    type</a></i><br>
+
+<img src="item-h0.gif" alt="" width="36" height="9" valign="middle"><a target="_self" " href="#map_contents"><i>
+- Contents of mapping specifications</a></i><br>
+
+<img src="item-h0.gif" alt="" width="72" height="9" valign="middle">
+<a target="_self" " href="#map_ent"><i>- ARM entity mapping</a></i><br>
+<img src="item-h0.gif" alt="" width="72" height="9" valign="middle">
+<a target="_self" " href="#map_att1"><i>- ARM entity attribute mapping - simple type</a></i><br>
+<img src="item-h0.gif" alt="" width="72" height="9" valign="middle">
+<a target="_self" " href="#map_att2"><i>- ARM entity attribute mapping - entity/select type</a></i><br>
+<img src="item-h0.gif" alt="" width="72" height="9" valign="middle">
+<a target="_self" " href="#map_alt"><i>- Alternate mappings</a></i><br>
+
+
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020422182450_11">Comments in Express files</a><br>
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020422182450_12">Inserting Notes and examples in xml files</a><br>
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020426165659_1">Example or note for a term definition</a><br>
@@ -182,8 +198,8 @@ e.g.</p>
 <p>&lt;ext_descriptions<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; module_directory=&quot;activity_as_directed&quot;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; schema_file=&quot;arm.xml&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/20 11:48:25 $"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.9 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/24 06:55:17 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.10 $"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; describe.selects=&quot;YES&quot;<br>
 &gt;</p>
 
@@ -314,33 +330,289 @@ Select type</a></h2>
 
 <p>&nbsp;
 
-<h2> Content of mapping-tables</h2>
-
-<p>In a mapping-table, the Application element column shall contain:</p>
-<ul>
-  <li>the name of an ARM entity(uppercase)
-  </li>
-  <li>the name of an attribute if this attribute is of a predefined type (STRING, INTEGER, ....). In that case, the AIM element column contains the name of the corresponding attribute in the MIM. The source column shall contain the number of the part where the MIM entity is defined. If the MIM attribute is not an attribute of the MIM entity that maps the ARM entity, then the reference path column shall depict how to reach the MIM attribute from the MIM entity that maps the ARM attribute
-  </li>
-  <li>an expression "&lt;arm_entity_name1> to &lt;arm_entity_name2> (as &lt;attribute_name&gt;) if the attribute attribute_name refers to an entity. In that case, the AIM element shall contain PATH and the source column shall be left empty. In such a case, the reference path column shall depict the entity sequence from the MIM entity that maps arm_entity_name1 to the MIM entity that maps arm_entity_name2.<br>
-    <br>
-    nb: in the case, attribute_name refers to a SELECT type, a distinct mapping shall be provided for every entity types in the SELECT type.<br>
-    => example of wrong Application element column: module Independent_property_representation<br>
-    => example of wrong Application element column and reference path column: module Product_categorization
-    (Product_category_hierarchy)<br>
-  </li>
-</ul>
-<p>When there are several alternate possibilities in the AIM element column, they shall be numbered and documented in the column Application element.</p>
+<h2><a name="map_contents">Content of mapping-tables</a></h2>
+<h3><a name="map_ent">ARM entity mapping</a></h3>
+A mapping specification for an ARM entity is displayed as:
+<p/>
 <blockquote>
-  <p>
-  => For example, in module Date_time, it should be explained, in the mapping of the entity date_time when date_and_time shall be used and when calendar_date should be used.</p>
-  <p>However, in that particular case, the mapping onto calendar_date is simply wrong as it does not enable to map all the attributes of date_time (so, only date_and_time shall be used).
-  </p>
+<table border="1">
+  <tr><td>
+      <h4>5.1.1 DOCUMENT_ASSIGNMENT</h4>
+<table border="0">
+<tr valign="top">
+<td>AIM element:</td>
+<td>applied_document_reference</td>
+</tr>
+<tr valign="top">
+<td>Source:</td>
+<td>ISO-10303-1122</td>
+</tr>
+<tr valign="top">
+<td>Rules:</td>
+<td></td>
+</tr>
+<tr valign="top">
+<td>Reference path:  </td>
+<td>(applied_document_reference &lt;=<br>document_reference)</td>
+</tr>
+</table>
+  </tr></td>
+</table>
 </blockquote>
-<p>&nbsp;</p>
+
+<b>ARM entity</b><br/>
+The ARM entity (Document_assignment in the example) is specified by:
+<blockquote>
+<pre>
+&lt;ae entity="Document_assignment"&gt;
+</pre>
+</blockquote>
+Note that identification of the ARM entity is case sensitive, it must be
+the same case as the ARM entity - the XSL will display the entity as UPPER case. 
+<p/><b>AIM entity</b><br/>
+The <i>AIM element</i> is defined by:
+<blockquote>
+<pre>
+&lt;aimelt&gt;applied_document_reference&lt;/aimelt&gt;
+</pre>
+</blockquote>
+
+
+<h3><a name="map_att1">ARM entity attribute mapping - simple type</a></h3>
+If the attribute is of a predefined type (STRING, INTEGER, ....) the
+mapping specification will be displayed as:
+<p/>
+<blockquote>
+<table border="1">
+  <tr><td>
+      <h4>5.1.1.1 role</h4>
+<table border="0">
+<tr valign="top">
+<td>AIM element:</td>
+<td>object_role.name</td>
+</tr>
+<tr valign="top">
+<td>Source:</td>
+<td>ISO-10303-1122</td>
+</tr>
+<tr valign="top">
+<td>Rules:</td>
+<td></td>
+</tr>
+<tr valign="top">
+<td>Reference path:  </td>
+<td>(applied_document_usage_constraint_assignment &lt;=
+document_usage_constraint_assignment)</td>
+</tr>
+</table>
+  </tr></td>
+</table>
+</blockquote>
+
+The ARM entity attribute (Document_assignment.role in the example) is specified by:
+<blockquote>
+<pre>
+  &lt;aa attribute="role"&gt;
+    &lt;aimelt&gt;object_role.name&lt;/aimelt&gt;
+</pre>
+</blockquote>
+The source column shall contain the number of the part where the MIM entity
+is defined. If the MIM attribute is not an attribute of the MIM entity that
+maps the ARM entity, then the reference path column shall depict how to
+reach the MIM attribute from the MIM entity that maps the ARM attribute 
+
+<h3><a name="map_att2">ARM entity attribute mapping - entity/select type</a></h3>
+If the attribute is of a select type or an entity then the mapping
+specification will be displayed as:
+<p/>
+<blockquote>
+<table border="1">
+  <tr><td>
+      <h4>5.1.1.2 Document_assignment to document_reference_item (as is_assigned_to)</h4>
+<table border="0">
+<tr valign="top">
+<td>AIM element:</td>
+<td>PATH</td>
+</tr>
+<tr valign="top">
+</tr>
+<tr valign="top">
+</tr>
+<tr valign="top">
+<td>Reference path:  </td>
+<td>(applied_document_reference<br/>
+applied_document_reference.items[i] +&gt;)<br/>
+document_reference_item</td>
+</tr>
+</table>
+  </tr></td>
+</table>
+</blockquote>
+
+The ARM entity attribute (Document_assignment.is_assigned_to in the example) is specified by:
+<blockquote>
+<pre>
+
+ &lt;aa attribute="is_assigned_to" assertion_to="document_reference_item"&gt;
+   &lt;aimelt&gt;PATH&lt;/aimelt&gt;</pre>
+</blockquote>
+nb: in the case, attribute_name refers to a SELECT type, a distinct mapping
+shall be provided for every entity types in the SELECT type.<br>
+
+<h3><a name="map_alt">Alternate mappings</a></h3>
+Alternate mappings will be displayed:
+<blockquote>
+<table border="1">
+  <tr><td>
+      <h4>5.1.1 DOCUMENT_ASSIGNMENT</h4>
+<table border="0">
+<p></p>#1   
+         If document assignment is not a partial document assignment.
+       <p></p>
+<table>
+<tr valign="top">
+<td>AIM element:</td>
+<td>applied_document_reference</td>
+</tr>
+<tr valign="top">
+<td>Source:</td>
+<td>ISO-10303-1122</td>
+</tr>
+<tr valign="top">
+<td>Reference path:  </td>
+<td>(applied_document_reference &lt;=<br>document_reference)</td>
+</tr>
+</table>
+<p></p>#2   
+         If document assignment is also a partial document assignment.
+       <p></p>
+<table>
+<tr valign="top">
+<td>AIM element:</td>
+<td>applied_document_usage_constraint_assignment</td>
+</tr>
+<tr valign="top">
+<td>Source:</td>
+<td>ISO-10303-1122</td>
+</tr>
+<tr valign="top">
+<td>Reference path:  </td>
+<td>(applied_document_usage_constraint_assignment &lt;=<br>       document_usage_constraint_assignment)</td>
+</tr>
+</table>
+
+  </tr></td>
+</table>
+</blockquote>
+
+The XML for this specification is:
+<blockquote>
+<pre>
+   &lt;ae entity="Document_assignment"&gt;
+     &lt;alt_map id="1"&gt;
+       &lt;description&gt;
+         If document assignment is not a partial document assignment.
+       &lt;/description&gt;
+       &lt;aimelt&gt;applied_document_reference&lt;/aimelt&gt;
+       &lt;source&gt;ISO-10303-1122&lt;/source&gt;
+       &lt;refpath&gt;(applied_document_reference &lt;=
+document_reference)&lt;/refpath&gt;
+     &lt;/alt_map&gt;
+
+     &lt;alt_map id="2"&gt;
+       &lt;description&gt;
+         If document assignment is also a partial document assignment.
+       &lt;/description&gt;
+       &lt;aimelt&gt;applied_document_usage_constraint_assignment&lt;/aimelt&gt;
+       &lt;source&gt;ISO-10303-1122&lt;/source&gt;
+       &lt;refpath&gt;(applied_document_usage_constraint_assignment &lt;=
+       document_usage_constraint_assignment)&lt;/refpath&gt;
+     &lt;/alt_map&gt;
+</pre>
+</blockquote>
+
+Once a description has been given for an alternative mapping at the ARM
+entity level, then this description may be re-used when specifying
+alternative attribute mappings. This is done identifying the description by
+<i>&lt;alt_mapalt_map.inc</i> attribute. For example, the descriptions
+below were re-used from the description for Document_assignment above.
+
+
+<blockquote>
+<table border="1">
+  <tr><td>
+      <h4>5.1.1.1 role</h4>
+
+<table border="0">      
+<p></p>#1   
+         If document assignment is not a partial document assignment.
+       <p></p>
+<table>
+<tr valign="top">
+<td>AIM element:</td>
+<td>object_role.name</td>
+</tr>
+<tr valign="top">
+<td>Source:</td>
+<td>ISO-10303-41</td>
+</tr>
+<tr valign="top">
+<td>Reference path:  </td>
+<td>(applied_document_reference &lt;=<br>       document_reference<br>       document_reference.role -&gt;<br>       object_role<br>       object_role.name)<br>       </td>
+</tr>
+</table>
+<p></p>#2   
+         If document assignment is also a partial document assignment.
+       <p></p>
+<table>
+<tr valign="top">
+<td>AIM element:</td>
+<td>document_usage_role.name</td>
+</tr>
+<tr valign="top">
+<td>Reference path:  </td>
+<td>(applied_document_usage_constraint_assignment &lt;=<br>document_usage_constraint_assignment<br>document_usage_constraint_assignment.role -&gt;<br>document_usage_role<br>document_usage_role.name)<br>       </td>
+</tr>
+</table>
+  </tr></td>
+
+</table>
+</blockquote>
+
+The XML for this specification is:
+<blockquote>
+<pre>
+   &lt;aa attribute="role"&gt;
+     &lt;alt_map alt_map.inc="1"&gt;
+       &lt;aimelt&gt;object_role.name&lt;/aimelt&gt;
+       &lt;source&gt;ISO-10303-41&lt;/source&gt;
+       &lt;refpath&gt;(applied_document_reference &lt;=
+       document_reference
+       document_reference.role -&gt;
+       object_role
+       object_role.name)
+       &lt;/refpath&gt;
+     &lt;/alt_map&gt;
+
+     
+     &lt;alt_map alt_map.inc="2"&gt;
+       &lt;aimelt&gt;document_usage_role.name&lt;/aimelt&gt;
+       &lt;refpath&gt;(applied_document_usage_constraint_assignment &lt;=
+document_usage_constraint_assignment
+document_usage_constraint_assignment.role -&gt;
+document_usage_role
+document_usage_role.name)
+       &lt;/refpath&gt;
+     &lt;/alt_map&gt;
+   &lt;/aa&gt;
+
+</pre>
+</blockquote>
+
+
 <h2><a name="20020422182450_11">Comments in Express files</a></h2>
 <span class="606025315-27032002"><font face="Arial" size="2">The arm.exp and
-mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $ keyword and the SC4 N number as a
+mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.10 2002/06/24 06:55:17 goset1 Exp $ keyword and the SC4 N number as a
 comment on the first few lines of the file.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">The Id will get
 expanded and updated every time you check in the file to CVS. That way you can
@@ -348,7 +620,7 @@ immediately tell when the file was last updated and will get around the issue
 raised by Greg about multiple versions of express files with the same N number.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">E.g.</font>&nbsp;</span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.10 2002/06/24 06:55:17 goset1 Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span>
 <p>&nbsp;
@@ -357,7 +629,7 @@ work_request_mim;</font></span>
 <p>&nbsp;
 <p><span class="606025315-27032002"><font face="Arial" size="2">We should also
 delete the last update comment at the bottom of the file as this is redundant -
-the update information is held by the $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $ field.</font></span>
+the update information is held by the $Id: additional_module_guidelines.htm,v 1.10 2002/06/24 06:55:17 goset1 Exp $ field.</font></span>
 <p>&nbsp;
 <h2><a name="20020422182450_12">Inserting Notes and examples in xml files</a></h2>
 <p><span class="198333009-21032002"><font face="Arial">In order to get the following output:</font></span><span class="919371121-26032002">
@@ -733,8 +1005,8 @@ from the old module to new module</font></span>
     &nbsp;&nbsp; publication.year=&quot;2002&quot;<br>
     &nbsp;&nbsp; published=&quot;y&quot;<br>
     </b>
-    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/20 11:48:25 $&quot;<br>
-    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.9 $&quot;&gt;
+    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/24 06:55:17 $&quot;<br>
+    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.10 $&quot;&gt;
   </div>
 &nbsp;
 <p>
@@ -986,17 +1258,17 @@ file will be modified like this:</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">&lt;?xml
 version=&quot;1.0&quot;?&gt;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.10 2002/06/24 06:55:17 goset1 Exp $ --&gt;<br>
 =======<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.10 2002/06/24 06:55:17 goset1 Exp $ --&gt;<br>
 &gt;&gt;&gt;&gt;&gt;&gt;&gt; 1.11<br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;<br>
 &lt;express<br>
 &nbsp; language_version=&quot;2&quot;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&nbsp; rcs.date=&quot;$Date: 2002/06/20 11:48:25 $&quot;<br>
-&nbsp; rcs.revision=&quot;$Revision: 1.9 $&quot;&gt;</span></font></p>
+&nbsp; rcs.date=&quot;$Date: 2002/06/24 06:55:17 $&quot;<br>
+&nbsp; rcs.revision=&quot;$Revision: 1.10 $&quot;&gt;</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">=======<br>
 </span></font></p>
 <p>&nbsp;</p>
