--- a/help/additional_module_guidelines.htm
+++ b/help/additional_module_guidelines.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1 align="center"><a name="20020422182450_1">Additional module guidelines</a></h1>
-<p>Version $Id: additional_module_guidelines.htm,v 1.11 2002/06/25 10:18:01 robbod Exp $</p>
+<p>Version $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $</p>
 <b>Contents</b><br>
 
 
@@ -198,8 +198,8 @@ e.g.</p>
 <p>&lt;ext_descriptions<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; module_directory=&quot;activity_as_directed&quot;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; schema_file=&quot;arm.xml&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/25 10:18:01 $"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.11 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/26 06:12:30 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.12 $"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; describe.selects=&quot;YES&quot;<br>
 &gt;</p>
 
@@ -364,7 +364,7 @@ A mapping specification for an ARM entity is displayed as:
 The ARM entity (Document_assignment in the example) is specified by:
 <blockquote>
 <pre>
-&lt;ae entity="Document_assignment"&gt;
+&lt;ae entity=&quot;Document_assignment&quot;&gt;
 </pre>
 </blockquote>
 Note that identification of the ARM entity is case sensitive, it must be
@@ -393,7 +393,7 @@ mapping specification will be displayed as:
 </tr>
 <tr valign="top">
 <td>Source:</td>
-<td>ISO-10303-1122</td>
+<td>ISO 10303-1122</td>
 </tr>
 <tr valign="top">
 <td>Rules:</td>
@@ -405,14 +405,14 @@ mapping specification will be displayed as:
 document_usage_constraint_assignment)</td>
 </tr>
 </table>
-  </tr></td>
+  </tr>
 </table>
 </blockquote>
 
 The ARM entity attribute (Document_assignment.role in the example) is specified by:
 <blockquote>
 <pre>
-  &lt;aa attribute="role"&gt;
+  &lt;aa attribute=&quot;role&quot;&gt;
     &lt;aimelt&gt;object_role.name&lt;/aimelt&gt;
 </pre>
 </blockquote>
@@ -453,7 +453,7 @@ The ARM entity attribute (Document_assignment.is_assigned_to in the example) is 
 <blockquote>
 <pre>
 
- &lt;aa attribute="is_assigned_to" assertion_to="document_reference_item"&gt;
+ &lt;aa attribute=&quot;is_assigned_to&quot; assertion_to=&quot;document_reference_item&quot;&gt;
    &lt;aimelt&gt;PATH&lt;/aimelt&gt;</pre>
 </blockquote>
 nb: in the case, attribute_name refers to a SELECT type, a distinct mapping
@@ -476,7 +476,7 @@ Alternate mappings will be displayed:
 </tr>
 <tr valign="top">
 <td>Source:</td>
-<td>ISO-10303-1122</td>
+<td>ISO 10303-1122</td>
 </tr>
 <tr valign="top">
 <td>Reference path:  </td>
@@ -493,7 +493,7 @@ Alternate mappings will be displayed:
 </tr>
 <tr valign="top">
 <td>Source:</td>
-<td>ISO-10303-1122</td>
+<td>ISO 10303-1122</td>
 </tr>
 <tr valign="top">
 <td>Reference path:  </td>
@@ -501,30 +501,28 @@ Alternate mappings will be displayed:
 </tr>
 </table>
 
-  </tr></td>
 </table>
-</blockquote>
 
 The XML for this specification is:
 <blockquote>
 <pre>
-   &lt;ae entity="Document_assignment"&gt;
-     &lt;alt_map id="1"&gt;
+   &lt;ae entity=&quot;Document_assignment&quot;&gt;
+     &lt;alt_map id=&quot;1&quot;&gt;
        &lt;description&gt;
          If document assignment is not a partial document assignment.
        &lt;/description&gt;
        &lt;aimelt&gt;applied_document_reference&lt;/aimelt&gt;
-       &lt;source&gt;ISO-10303-1122&lt;/source&gt;
+       &lt;source&gt;ISO 10303-1122&lt;/source&gt;
        &lt;refpath&gt;(applied_document_reference &lt;=
 document_reference)&lt;/refpath&gt;
      &lt;/alt_map&gt;
 
-     &lt;alt_map id="2"&gt;
+     &lt;alt_map id=&quot;2&quot;&gt;
        &lt;description&gt;
          If document assignment is also a partial document assignment.
        &lt;/description&gt;
        &lt;aimelt&gt;applied_document_usage_constraint_assignment&lt;/aimelt&gt;
-       &lt;source&gt;ISO-10303-1122&lt;/source&gt;
+       &lt;source&gt;ISO 10303-1122&lt;/source&gt;
        &lt;refpath&gt;(applied_document_usage_constraint_assignment &lt;=
        document_usage_constraint_assignment)&lt;/refpath&gt;
      &lt;/alt_map&gt;
@@ -554,7 +552,7 @@ below were re-used from the description for Document_assignment above.
 </tr>
 <tr valign="top">
 <td>Source:</td>
-<td>ISO-10303-41</td>
+<td>ISO 10303-41</td>
 </tr>
 <tr valign="top">
 <td>Reference path:  </td>
@@ -574,18 +572,16 @@ below were re-used from the description for Document_assignment above.
 <td>(applied_document_usage_constraint_assignment &lt;=<br>document_usage_constraint_assignment<br>document_usage_constraint_assignment.role -&gt;<br>document_usage_role<br>document_usage_role.name)<br>       </td>
 </tr>
 </table>
-  </tr></td>
 
 </table>
-</blockquote>
 
 The XML for this specification is:
 <blockquote>
 <pre>
-   &lt;aa attribute="role"&gt;
-     &lt;alt_map alt_map.inc="1"&gt;
+   &lt;aa attribute=&quot;role&quot;&gt;
+     &lt;alt_map alt_map.inc=&quot;1&quot;&gt;
        &lt;aimelt&gt;object_role.name&lt;/aimelt&gt;
-       &lt;source&gt;ISO-10303-41&lt;/source&gt;
+       &lt;source&gt;ISO 10303-41&lt;/source&gt;
        &lt;refpath&gt;(applied_document_reference &lt;=
        document_reference
        document_reference.role -&gt;
@@ -595,7 +591,7 @@ The XML for this specification is:
      &lt;/alt_map&gt;
 
      
-     &lt;alt_map alt_map.inc="2"&gt;
+     &lt;alt_map alt_map.inc=&quot;2&quot;&gt;
        &lt;aimelt&gt;document_usage_role.name&lt;/aimelt&gt;
        &lt;refpath&gt;(applied_document_usage_constraint_assignment &lt;=
 document_usage_constraint_assignment
@@ -612,7 +608,7 @@ document_usage_role.name)
 
 <h2><a name="20020422182450_11">Comments in Express files</a></h2>
 <span class="606025315-27032002"><font face="Arial" size="2">The arm.exp and
-mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.11 2002/06/25 10:18:01 robbod Exp $ keyword and the SC4 N number as a
+mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $ keyword and the SC4 N number as a
 comment on the first few lines of the file.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">The Id will get
 expanded and updated every time you check in the file to CVS. That way you can
@@ -620,7 +616,7 @@ immediately tell when the file was last updated and will get around the issue
 raised by Greg about multiple versions of express files with the same N number.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">E.g.</font>&nbsp;</span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: additional_module_guidelines.htm,v 1.11 2002/06/25 10:18:01 robbod Exp $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span>
 <p>&nbsp;
@@ -629,7 +625,7 @@ work_request_mim;</font></span>
 <p>&nbsp;
 <p><span class="606025315-27032002"><font face="Arial" size="2">We should also
 delete the last update comment at the bottom of the file as this is redundant -
-the update information is held by the $Id: additional_module_guidelines.htm,v 1.11 2002/06/25 10:18:01 robbod Exp $ field.</font></span>
+the update information is held by the $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $ field.</font></span>
 <p>&nbsp;
 <h2><a name="20020422182450_12">Inserting Notes and examples in xml files</a></h2>
 <p><span class="198333009-21032002"><font face="Arial">In order to get the following output:</font></span><span class="919371121-26032002">
@@ -733,7 +729,7 @@ To create a table in a module, the syntax is similar to HTML one. For example:
 <p>
   This will produce
 </p>
-&nbsp;
+  &nbsp;
 <p align="center"><b>Table 1 — Table caption</b></p>
 <center>
 <table cellSpacing="0" cellPadding="2" border="1">
@@ -1005,8 +1001,8 @@ from the old module to new module</font></span>
     &nbsp;&nbsp; publication.year=&quot;2002&quot;<br>
     &nbsp;&nbsp; published=&quot;y&quot;<br>
     </b>
-    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/25 10:18:01 $&quot;<br>
-    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.11 $&quot;&gt;
+    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/26 06:12:30 $&quot;<br>
+    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.12 $&quot;&gt;
   </div>
 &nbsp;
 <p>
@@ -1227,7 +1223,7 @@ When you do a CVS
 <p>- The SourceForge
   server now contains a file that is at a later revision than the one on your
   machine.</p>
-&nbsp;
+    &nbsp;
 <p>Next time you do
   a CVS update, CVS will recognize this and try to be smart.
 <p>It will try to
@@ -1258,21 +1254,20 @@ file will be modified like this:</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">&lt;?xml
 version=&quot;1.0&quot;?&gt;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.11 2002/06/25 10:18:01 robbod Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $ --&gt;<br>
 =======<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.11 2002/06/25 10:18:01 robbod Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $ --&gt;<br>
 &gt;&gt;&gt;&gt;&gt;&gt;&gt; 1.11<br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;<br>
 &lt;express<br>
 &nbsp; language_version=&quot;2&quot;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&nbsp; rcs.date=&quot;$Date: 2002/06/25 10:18:01 $&quot;<br>
-&nbsp; rcs.revision=&quot;$Revision: 1.11 $&quot;&gt;</span></font></p>
+&nbsp; rcs.date=&quot;$Date: 2002/06/26 06:12:30 $&quot;<br>
+&nbsp; rcs.revision=&quot;$Revision: 1.12 $&quot;&gt;</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">=======<br>
 </span></font></p>
 <p>&nbsp;</p>
 
 </body>
 
-</html>
