--- a/help/GE_guidelines.htm
+++ b/help/GE_guidelines.htm
@@ -12,56 +12,73 @@
 
 <h1 align="center">Graphical Express additional directives</h1>
 
-<h2>Logo in Express-G diagrams</h2>
+<h2>While in GE</h2>
 
-<p>To eliminate the Eurostep logo and incorrect title</p>
+<h3>&nbsp;Eurostep logo&nbsp;</h3>
 
-<ul>
-  <li>cover with a rectangle in VISIO.</li>
-</ul>
-<p>OR alternatively</p>
-<ul>
-  <li>&nbsp;after exporting as XML, crop the gif images with&nbsp; Microsoft
-    Photo Editor (or similar). </li>
-</ul>
+To eliminate the logo and&nbsp; incorrect title, cover with a rectangle in VISIO.
+<p>or, alternatively &nbsp;after exporting as XML, crop the *.gif images (see
+below).</p>
+<h3>&nbsp;</h3>
+<h3>Required comments</h3>
+<p>The best way to get to get static comments into arm.exp or mim.exp , is to go
+to the schema page and click on main schema, then add them to the description
+field.</p>
+<p>Example:&nbsp;</p>
+<p>&nbsp; $Id:&nbsp; $<br>
+&nbsp; N773 - ISO TS - 10303-1042 Work request - EXPRESS MIM</p>
+<blockquote>
+  <p>NOTE : in above, any text after the colon and before the second dollar sign
+  was added by CVS - I did not put it in... This is how it is supposed to work.</p>
+</blockquote>
+<p>Remark&nbsp; delimiters will be added to Express by GE export process.</p>
 <h2>Exporting from GE</h2>
 
-<p>Export XML and also express.</p>
+<p>Export EXPRESS and Publish as XML.</p>
 
-<blockquote>
-  <p>NOTE Some files generated from older versions of GE&nbsp; have errors.&nbsp; model.xml has no
-  DOCTYPE tag. (Schema_name).xml has incorrect DOCTYPE tag, and it is in the
-  wrong location (see below).</p>
+<p>Now run ge2module.wsf</p>
 
-  <p>This means that xml aware software cant find the dtd.</p>
+<h2>Cleanup of files after running ge2module.wsf.</h2>
 
-  <p>&lt;?xml version=&quot;1.0&quot; encoding="UTF-8"?&gt;<br>
-&lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;&nbsp; ...
-  Second tag in file. Note leading explanation point<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.2 2002/05/14 00:39:37 thendrix Exp $ --><br>
-&lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;</p>
+<h3>.exp files:&nbsp;</h3>
 
-</blockquote>
+<p>Remove language identifier if any.</p>
 
-<p>Add&nbsp; to Express element the attribute description.file = &quot;arm_descriptions.xml&quot;&nbsp;&nbsp;
+<p>Remove Eurostep comments.</p>
+
+<p>Remove any extra schemas.</p>
+
+<p>Add N number and cvs keyword - note : these can be added to the GE model once
+instead of in outputs each time you must modfiy.</p>
+
+<h3>&nbsp;Express-G diagrams&nbsp;</h3>
+
+<h3>armexp?.gif and mimexp?.gif</h3>
+
+<p>If Eurostep logo is still visible,&nbsp;</p>
+<ul>
+  <li> crop the gif images, ( for example with&nbsp; Microsoft
+    Photo Editor). Be sure to crop only bottom and right side, retaining
+    original settings for top and left side. This will assure that image maps
+    still work.&nbsp; </li>
+</ul>
+<h2>arm.xml and mim.xml</h2>
+
+<p>Add&nbsp; to express element the attribute description.file = &quot;arm_descriptions.xml&quot;&nbsp;&nbsp;
 or &quot;mim_descriptions.xml&quot;&nbsp;</p>
 
-<h2>ge2module</h2>
+<p>Add selects=&quot;YES&quot; to get boilerplate descriptions for selects.</p>
 
-<p>Before running&nbsp; deleted all irrelevant files that are created by
-exporting from GE as xml.</p>
+<h2>armexpg?.xml or mimexpg?.xml</h2>
 
-<p>To get ge2module.js to run without error,&nbsp; I commented out line 351 and
-before running </p>
+<p>If there is no entity level diagram for the mim schema (or occasionaly the
+arm schema) , replace the href in the image map with an href to the mim listing
+in clause 5.&nbsp; </p>
 
-<p>Rename the image files. I suggest we standardize names of Express-G&nbsp;
-diagram files to&nbsp; armexpg1, etc.. since not everyone uses GE.&nbsp;&nbsp;
-You can rename&nbsp; the gif and htm files before running&nbsp; g2module , but
-in that case you must update the&nbsp; &lt;img SRC = &quot;&quot;&gt; tag. </p>
+<blockquote>
+  <p>EXAMPLE&nbsp; For Shape_property_assignment_mim: href=&quot;../shape_property_assignment/sys/5_mim.xml#mim_express&quot;</p>
 
-<p>Follow Pascal's email to edit titles xml files. I tried adding a title
-to&nbsp; the html file in &lt;img title=&quot;&quot;&nbsp; ...&gt; but&nbsp; it
-was ignored by g2module</p>
+</blockquote>
 
 </body>
 
