--- a/help/GE_guidelines.htm
+++ b/help/GE_guidelines.htm
@@ -25,7 +25,7 @@ below).</p>
 to the schema page and click on main schema, then add them to the description
 field.</p>
 <p>Example:&nbsp;</p>
-<p>&nbsp; $Id:&nbsp; $<br>
+<p>&nbsp; $Id: GE_guidelines.htm,v 1.2 2002/07/11 20:04:06 thendrix Exp $<br>
 &nbsp; N773 - ISO TS - 10303-1042 Work request - EXPRESS MIM</p>
 <blockquote>
   <p>NOTE : in above, any text after the colon and before the second dollar sign
@@ -66,8 +66,6 @@ instead of in outputs each time you must modfiy.</p>
 
 <p>Add&nbsp; to express element the attribute description.file = &quot;arm_descriptions.xml&quot;&nbsp;&nbsp;
 or &quot;mim_descriptions.xml&quot;&nbsp;</p>
-
-<p>Add selects=&quot;YES&quot; to get boilerplate descriptions for selects.</p>
 
 <h2>armexpg?.xml or mimexpg?.xml</h2>
 
