Corrected entity naming

--- a/help/additional_module_guidelines.htm
+++ b/help/additional_module_guidelines.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1 align="center"><a name="20020422182450_1">Additional module guidelines</a></h1>
-<p>Version $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $</p>
+<p>Version $Id: additional_module_guidelines.htm,v 1.13 2002/06/27 07:50:52 goset1 Exp $</p>
 <b>Contents</b><br>
 
 
@@ -90,8 +90,6 @@ naming<br>
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#cvs">CVS
 Tips</a>
 
-</p><p>
-&nbsp;
 
 </p><p>
 &nbsp;
@@ -101,11 +99,18 @@ Tips</a>
 <p>&nbsp;</p>
 <h2><a name="20020422182450_2">Naming of schemas</a></h2>
 
-<p>All ARM schemas shall have a name terminated with &quot;_arm&quot;.</p>
+<p>All ARM schemas shall have the same name as the module suffixed with &quot;_arm&quot;.</p>
 
-<p>All MIM schemas shall have a name terminated with &quot;_mim&quot;.</p>
+<p>All MIM schemas shall have the same name as the module suffixed with &quot;_mim&quot;.</p>
 
 <p>The schema name shall start with an uppercase letter.</p>
+<p>For example:</p>
+<dl>
+  <dd>The ARM for the activity module is: <tt>Activity_arm</tt></dt>
+  <dd>The MIM for the activity module is: <tt>Activity_mim</tt></dt>
+</dl>
+
+
 
 <p>&nbsp;</p>
 
@@ -114,7 +119,7 @@ Tips</a>
 <p>All entity data types defined in the ARM of application modules shall be named with
 an uppercase first letter.</p>
 
-<p>All entity data types defined in the ARM of application modules shall be named with
+<p>All entity data types defined in the MIM of application modules shall be named with
 a lowercase first letter.</p>
 
 <p>All types, in ARMs and MIMs, shall be named with a lowercase first letter.</p>
@@ -198,8 +203,8 @@ e.g.</p>
 <p>&lt;ext_descriptions<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; module_directory=&quot;activity_as_directed&quot;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; schema_file=&quot;arm.xml&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/26 06:12:30 $"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.12 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/27 07:50:52 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.13 $"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; describe.selects=&quot;YES&quot;<br>
 &gt;</p>
 
@@ -608,7 +613,7 @@ document_usage_role.name)
 
 <h2><a name="20020422182450_11">Comments in Express files</a></h2>
 <span class="606025315-27032002"><font face="Arial" size="2">The arm.exp and
-mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $ keyword and the SC4 N number as a
+mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.13 2002/06/27 07:50:52 goset1 Exp $ keyword and the SC4 N number as a
 comment on the first few lines of the file.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">The Id will get
 expanded and updated every time you check in the file to CVS. That way you can
@@ -616,7 +621,7 @@ immediately tell when the file was last updated and will get around the issue
 raised by Greg about multiple versions of express files with the same N number.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">E.g.</font>&nbsp;</span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.13 2002/06/27 07:50:52 goset1 Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span>
 <p>&nbsp;
@@ -625,7 +630,7 @@ work_request_mim;</font></span>
 <p>&nbsp;
 <p><span class="606025315-27032002"><font face="Arial" size="2">We should also
 delete the last update comment at the bottom of the file as this is redundant -
-the update information is held by the $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $ field.</font></span>
+the update information is held by the $Id: additional_module_guidelines.htm,v 1.13 2002/06/27 07:50:52 goset1 Exp $ field.</font></span>
 <p>&nbsp;
 <h2><a name="20020422182450_12">Inserting Notes and examples in xml files</a></h2>
 <p><span class="198333009-21032002"><font face="Arial">In order to get the following output:</font></span><span class="919371121-26032002">
@@ -1001,8 +1006,8 @@ from the old module to new module</font></span>
     &nbsp;&nbsp; publication.year=&quot;2002&quot;<br>
     &nbsp;&nbsp; published=&quot;y&quot;<br>
     </b>
-    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/26 06:12:30 $&quot;<br>
-    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.12 $&quot;&gt;
+    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/27 07:50:52 $&quot;<br>
+    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.13 $&quot;&gt;
   </div>
 &nbsp;
 <p>
@@ -1254,17 +1259,17 @@ file will be modified like this:</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">&lt;?xml
 version=&quot;1.0&quot;?&gt;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.13 2002/06/27 07:50:52 goset1 Exp $ --&gt;<br>
 =======<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.12 2002/06/26 06:12:30 robbod Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.13 2002/06/27 07:50:52 goset1 Exp $ --&gt;<br>
 &gt;&gt;&gt;&gt;&gt;&gt;&gt; 1.11<br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;<br>
 &lt;express<br>
 &nbsp; language_version=&quot;2&quot;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&nbsp; rcs.date=&quot;$Date: 2002/06/26 06:12:30 $&quot;<br>
-&nbsp; rcs.revision=&quot;$Revision: 1.12 $&quot;&gt;</span></font></p>
+&nbsp; rcs.date=&quot;$Date: 2002/06/27 07:50:52 $&quot;<br>
+&nbsp; rcs.revision=&quot;$Revision: 1.13 $&quot;&gt;</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">=======<br>
 </span></font></p>
 <p>&nbsp;</p>
