--- a/Repository_index.html
+++ b/Repository_index.html
@@ -1662,6 +1662,27 @@ src="./images/folder.gif"></a></font>
 </tr>
 </table>
 
+<a href="./data/modules/state/sys/introduction.xml"><font size="-1"><b>state (1255)</b></font></a><table cellspacing="0" cellpadding="1">
+<tr>
+<td> </td>
+<td>
+<font size="-2"><a href="./data/modules/state/sys/4_info_reqs.xml">ARM</a></font>
+</td>
+<td>
+<font size="-2"><a href="./data/modules/state/armexpg1.xml">ARM-G</a></font>
+</td>
+<td>
+<font size="-2"><a href="./data/modules/state/sys/5_mim.xml">MIM</a></font>
+</td>
+<td>
+<font size="-2"><a href="./data/modules/state/mimexpg1.xml">MIM-G</a></font>
+</td>
+<td>
+<font size="-2"><a href="./data/modules/state"><img alt="module folder" border="0" align="middle" src="./images/folder.gif"></a></font>
+</td>
+</tr>
+</table>
+
 <a href="./data/modules/state_definition/sys/introduction.xml"><font size="-1"><b>state_definition (1255)</b></font></a><table cellspacing="0" cellpadding="1">
 <tr>
 <td> </td>
