aligned new modules not yet balloted

--- a/Repository_index.html
+++ b/Repository_index.html
@@ -1534,8 +1534,7 @@ src="./images/folder.gif"></a></font>
 </td>
 </tr>
 </table>
-</td>
-<td valign="top">
+
 <a href="./data/modules/interface/sys/introduction.xml"><font size="-1"><b>interface (1251)</b></font></a><table cellspacing="0" cellpadding="1">
 <tr>
 <td> </td>
@@ -1573,11 +1572,13 @@ src="./images/folder.gif"></a></font>
 <font size="-2"><a href="./data/modules/product_as_individual/mimexpg1.xml">MIM-G</a></font>
 </td>
 <td>
-<font size="-2"><a href="./data/modules/product_as_individual"><img alt="module folder" border="0" align="middle" src="./images/folder.gif"></a></font>
+<font size="-2"><a href="./data/modules/product_as_individual"><img alt="module folder" border="0" align="middle" src="./images/folder.gif" width="16" height="16"></a></font>
 </td>
 </tr>
 </table>
 
+</td>
+<td valign="top">
 <a href="./data/modules/product_identification_assignment/sys/introduction.xml"><font size="-1"><b>product_identification_assignment (1277)</b></font></a><table cellspacing="0" cellpadding="1">
 <tr>
 <td> </td>
@@ -1598,7 +1599,6 @@ src="./images/folder.gif"></a></font>
 </td>
 </tr>
 </table>
-
 <a href="./data/modules/product_structure_breakdown/sys/introduction.xml"><font size="-1"><b>product_structure_breakdown (1248)</b></font></a><table cellspacing="0" cellpadding="1">
 <tr>
 <td> </td>
