aligned new modules not yet balloted

--- a/Repository_index.html
+++ b/Repository_index.html
@@ -1683,7 +1683,8 @@ src="./images/folder.gif"></a></font>
 </tr>
 </table>
 
-<a href="./data/modules/state_definition/sys/introduction.xml"><font size="-1"><b>state_definition (1255)</b></font></a><table cellspacing="0" cellpadding="1">
+<a href="./data/modules/state_definition/sys/introduction.xml"><font size="-1"><b>state_definition
+(-)</b></font></a><table cellspacing="0" cellpadding="1">
 <tr>
 <td> </td>
 <td>
