--- a/Repository_index.html
+++ b/Repository_index.html
@@ -1705,44 +1705,44 @@ src="./images/folder.gif"></a></font>
 </tr>
 </table>
 
-<a href="./data/modules/support_driver/sys/introduction.xml"><font size="-1"><b>support_driver (1279)</b></font></a><table cellspacing="0" cellpadding="1">
+<a href="./data/modules/support_drivers/sys/introduction.xml"><font size="-1"><b>support_drivers (1279)</b></font></a><table cellspacing="0" cellpadding="1">
 <tr>
 <td> </td>
 <td>
-<font size="-2"><a href="./data/modules/support_driver/sys/4_info_reqs.xml">ARM</a></font>
+<font size="-2"><a href="./data/modules/support_drivers/sys/4_info_reqs.xml">ARM</a></font>
 </td>
 <td>
-<font size="-2"><a href="./data/modules/support_driver/armexpg1.xml">ARM-G</a></font>
+<font size="-2"><a href="./data/modules/support_drivers/armexpg1.xml">ARM-G</a></font>
 </td>
 <td>
-<font size="-2"><a href="./data/modules/support_driver/sys/5_mim.xml">MIM</a></font>
+<font size="-2"><a href="./data/modules/support_drivers/sys/5_mim.xml">MIM</a></font>
 </td>
 <td>
-<font size="-2"><a href="./data/modules/support_driver/mimexpg1.xml">MIM-G</a></font>
+<font size="-2"><a href="./data/modules/support_drivers/mimexpg1.xml">MIM-G</a></font>
 </td>
 <td>
-<font size="-2"><a href="./data/modules/support_driver"><img alt="module folder" border="0" align="middle" src="./images/folder.gif"></a></font>
+<font size="-2"><a href="./data/modules/support_drivers"><img alt="module folder" border="0" align="middle" src="./images/folder.gif"></a></font>
 </td>
 </tr>
 </table>
 
-<a href="./data/modules/support_driver_definition/sys/introduction.xml"><font size="-1"><b>support_driver_definition (-)</b></font></a><table cellspacing="0" cellpadding="1">
+<a href="./data/modules/support_drivers_definition/sys/introduction.xml"><font size="-1"><b>support_drivers_definition (-)</b></font></a><table cellspacing="0" cellpadding="1">
 <tr>
 <td> </td>
 <td>
-<font size="-2"><a href="./data/modules/support_driver_definition/sys/4_info_reqs.xml">ARM</a></font>
+<font size="-2"><a href="./data/modules/support_drivers_definition/sys/4_info_reqs.xml">ARM</a></font>
 </td>
 <td>
-<font size="-2"><a href="./data/modules/support_driver_definition/armexpg1.xml">ARM-G</a></font>
+<font size="-2"><a href="./data/modules/support_drivers_definition/armexpg1.xml">ARM-G</a></font>
 </td>
 <td>
-<font size="-2"><a href="./data/modules/support_driver_definition/sys/5_mim.xml">MIM</a></font>
+<font size="-2"><a href="./data/modules/support_drivers_definition/sys/5_mim.xml">MIM</a></font>
 </td>
 <td>
-<font size="-2"><a href="./data/modules/support_driver_definition/mimexpg1.xml">MIM-G</a></font>
+<font size="-2"><a href="./data/modules/support_drivers_definition/mimexpg1.xml">MIM-G</a></font>
 </td>
 <td>
-<font size="-2"><a href="./data/modules/support_driver_definition"><img alt="module folder" border="0" align="middle" src="./images/folder.gif"></a></font>
+<font size="-2"><a href="./data/modules/support_drivers_definition"><img alt="module folder" border="0" align="middle" src="./images/folder.gif"></a></font>
 </td>
 </tr>
 </table>
